--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -14,9 +14,9 @@ tar xvf /tmp/episode.tar
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
 Add a line like the following to header.php
 
-EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
+EXISTING LINE: "<a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>"
 
-EXISTING LINE: &nbsp; | &nbsp;
+EXISTING LINE: "&nbsp; | &nbsp;"
 
 NEW LINE: <a href="episode/show?state=current"><?php echo t('TV Episodes') ?></a>
 
