--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -5,19 +5,21 @@
 As installed on my system
 
 1.
-cd /usr/share/mythtv/mythweb/modules
-gunzip //tmp/episode.tar.gz
-tar xvf /tmp/episode.tar
+ * cd /usr/share/mythtv/mythweb/modules
+ * gunzip //tmp/episode.tar.gz
+ * tar xvf /tmp/episode.tar
 
 2. 
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
 Add a line like the following to header.php
 
+{{{
 `EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>`
 `EXISTING LINE: &nbsp; | &nbsp;`
 `NEW LINE: <a href="episode/show?state=current"><?php echo t('TV Episodes') ?></a>`
 `NEW LINE: &nbsp; | &nbsp;`
 `EXISTING LINE: <?php } ?>`
+}}}
 
 3.
 mkdir /var/lib/mythtv/episode
