--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -6,7 +6,7 @@ As installed on my system
 {{{
 1.
 cd /usr/share/mythtv/mythweb/modules
-gunzip //tmp/episode.tar.gz
+gunzip /tmp/episode.tar.gz
 tar xvf /tmp/episode.tar
 
 2. 
@@ -40,7 +40,6 @@ Add a cronjob to roots crontab
 5.
 cd /usr/share/mythtv/mythweb/modules/_shared/lang
 ./build_translation.pl
-
-Note:  If it takes a long time to load the main page try setting $getrecorded to 0 in handler.php.  If you do this I think the page will load faster but shows that you have recorded won't show up in green on the main page.
-
 }}}
+*Note:* 
+If it takes a long time to load the main page try setting $getrecorded to 0 in handler.php.  If you do this I think the page will load faster but shows that you have recorded won't show up in green on the main page.
