Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -3,7 +3,7 @@
 = Details =
 
 21 Aug 2010
-  * Added Previous Recordings back in and don't default to All
+  * Added Previous Recordings to mainpage
   * Fix for subtitles that are not exact matches
   * Enhanced the previous recordings within the episode listing
   * Fixed some php errors
