--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,5 +1,5 @@
 #summary A few mythepisode screenshots
 #labels Featured
 
-<table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/mainpage.jpg?attredirects=0" imageanchor="1"></a></div><table border="1" bordercolor="#888888" cellspacing="0" style="border-collapse:collapse;border-color:rgb(136, 136, 136);border-width:1px"><tbody><tr><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Main Page</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr"> Main Page - Provides a listing of the number of TV shows recorded in the US along with the number of currently running TV shows.  By selecting All TV Shows all 10,000 plus shows will be displayed in alphabetical 
+<table cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/mainpage.jpg?attredirects=0" imageanchor="1"></a></div><table border="1" bordercolor="#888888" cellspacing="0" style="border-collapse:collapse;border-color:rgb(136, 136, 136);border-width:1px"><tbody><tr><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Main Page</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr"> Main Page - Provides a listing of the number of TV shows recorded in the US along with the number of currently running TV shows.  By selecting All TV Shows all 10,000 plus shows will be displayed in alphabetical 
 order.  Selecting Current TV Shows only shows currently running shows.  Update Show Listing will go to tvrage.com and update the listing with current information.</div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/mainpage.jpg?attredirects=0" imageanchor="1"><img border="0" height="231" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242209243/home/images/mainpage.jpg?height=231&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">Jumping down the page we see that some shows are highlighted in green.  This indicates that the show has had previously recorded episodes.  Clicking on the hyperlink will take you to the episode listings.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar1.jpg?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/whalewar1.jpg?height=235&amp;width=400" width="400" /></a></div><br /><div style="display:block;text-align:left"></div></td></tr><tr><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars Scheduled Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">The top of the page shows the number of episodes for the selected show along with the Total number of episodes, Total Recorded, Total Remaining and Total Scheduled.  By default only episodes that haven't been recorded will show up in the listing.  The episode listed in dark blue is scheduled to be recorded.  The episode listing can be refreshed from www.ragetv.com by selecting the Update Episode Listing.  Show All Episodes will show all episodes including the previously recorded episodes.<br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars All Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">All episodes including previously recorded are displayed.  Notice that the episodes that are scheduled to record or have been previously recorded do not have the box on the left checked.  Selecting Create tvwish list at the bottom of the page will create a tvwish list file that will schedule the checked episoded for recording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar3.jpg?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/whalewar3.jpg?height=222&amp;width=400" width="400" /></a></div><br /></td></tr><tr><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">TVwish list</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Previously Recorded Programs</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">Previously Recorded programs can be viewed and removed for rerecording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/recordedprograms.jpg?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/recordedprograms.jpg?height=237&amp;width=400" width="400" /></a></div><br /></td></tr></tbody></table><br /><div dir="ltr"><div style="display:block;text-align:left"><br /><br /><br /><br /><br /><br /></div></div><div dir="ltr"><br /></div><div dir="ltr"><br /><br /><br /><br /><br /></div></div></td></tr></tbody></table>
