Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -17,6 +17,8 @@
 <td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars Scheduled Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">The top of the page shows the number of episodes for the selected show along with the Total number of episodes, Total Recorded, Total Remaining and Total Scheduled.  By default only episodes that haven't been recorded will show up in the listing.  The episode listed in dark blue is scheduled to be recorded.  The episode listing can be refreshed from www.ragetv.com by selecting the Update Episode Listing.  Show All Episodes will show all episodes including the previously recorded episodes.<br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars All Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">All episodes including previously recorded are displayed.  Notice that the episodes that are scheduled to record or have been previously recorded do not have the box on the left checked.  Selecting Create tvwish list at the bottom of the page will create a tvwish list file that will schedule the checked episoded for recording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar3.jpg?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/whalewar3.jpg?height=222&amp;width=400" width="400" /></a></div><br /></td></tr>
 
 <tr>
-<td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">TVwish list</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Previously Recorded Programs</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">Previously Recorded programs can be viewed and removed for rerecording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/recordedprograms.jpg?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/recordedprograms.jpg?height=237&amp;width=400" width="400" /></a></div><br /></td></tr>
-</tbody>
+<td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">TVwish list</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /></td><td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Previously Recorded Programs</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">Previously Recorded programs can be viewed and removed for rerecording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/recordedprograms.jpg?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/recordedprograms.jpg?height=237&amp;width=400" width="400" /></a></div><br />
+</td>
+</tr>
+
 </table>
