--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -13,9 +13,9 @@
 </tr>
 
 <tr>
-<td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars Scheduled Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">The top of the page shows the number of episodes for the selected show along with the Total number of episodes, Total Recorded, Total Remaining and Total Scheduled.  By default only episodes that haven't been recorded will show up in the listing.  The episode listed in dark blue is scheduled to be recorded.  The episode listing can be refreshed from www.ragetv.com by selecting the Update Episode Listing.  Show All Episodes will show all episodes including the previously recorded episodes.<br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a></div><br />
+<td><b>Whale Wars Scheduled Episodes</b><br/><br/>The top of the page shows the number of episodes for the selected show along with the Total number of episodes, Total Recorded, Total Remaining and Total Scheduled.  By default only episodes that haven't been recorded will show up in the listing.  The episode listed in dark blue is scheduled to be recorded.  The episode listing can be refreshed from www.ragetv.com by selecting the Update Episode Listing.  Show All Episodes will show all episodes including the previously recorded episodes.<br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a></div><br />
 </td>
-<td style="width:60px"><div class="sites-embed-align-left-wrapping-off"><div class="sites-embed-border-on sites-embed" style="width:400px;"><h4 class="sites-embed-title">Whale Wars All Episodes</h4><div class="sites-embed-content sites-embed-type-text"><div class="sites-embed-content-textbox"><div dir="ltr">All episodes including previously recorded are displayed.  Notice that the episodes that are scheduled to record or have been previously recorded do not have the box on the left checked.  Selecting Create tvwish list at the bottom of the page will create a tvwish list file that will schedule the checked episoded for recording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar3.jpg?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/whalewar3.jpg?height=222&amp;width=400" width="400" /></a></div><br />
+<td><b>Whale Wars All Episodes</b><br/><br/>All episodes including previously recorded are displayed.  Notice that the episodes that are scheduled to record or have been previously recorded do not have the box on the left checked.  Selecting Create tvwish list at the bottom of the page will create a tvwish list file that will schedule the checked episoded for recording.<br /><br /><br /><br /></div></div></div></div></div><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar3.jpg?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/whalewar3.jpg?height=222&amp;width=400" width="400" /></a></div><br />
 </td>
 </tr>
 
