--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -20,7 +20,7 @@
 </tr>
 
 <tr>
-<td><b>TVwish List</b><br/><br/>From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /><br/><br/><br/>
+<td><b>TVwish List</b><br/><br/>From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /><br/><br/><br/><br/>
 </td>
 <td><b>Previously Recorded Programs</b><br/><br/>Previously Recorded programs can be viewed and removed for rerecording.<br /><br /><br /><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/recordedprograms.jpg?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/recordedprograms.jpg?height=237&amp;width=400" width="400" /></a></div><br />
 </td>
