Edited wiki page Contributors through web user interface.

--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -1,4 +1,6 @@
+#summary mythepisode contributors
 #labels Featured
+
 Thanks to the those who have helped out by contributing code fixes or
 suggestions.
 
