Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -6,6 +6,7 @@ Coming soon
   * Update to look of episode listing page
   * Update delete button look on previous recordings page
   * Fix sort issue on previous recordings page
+  * Fix for grabid.pl and missing episodes
 
 21 Aug 2010
   * Added Previous Recordings to mainpage
