--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -12,6 +12,7 @@ Chris K.:
   * Update to grabshowsall.pl for multiple aoi's
   * Update to delete button for previous recordings
   * Fixed sort problem on previous recordings
+  * Fix for grabid.pl and missing episodes
   
 
 Marc T.:
