--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -14,6 +14,9 @@ Chris K.:
   * Fixed sort problem on previous recordings
   * Fix for grabid.pl and missing episodes
   
+Doug H.:
+  * Fix to handler.php to improve performance
+  * Update to the mainpage to only display recorded shows
 
 Marc T.:
   * php fix for previous recordings
