--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -3,13 +3,9 @@
 
 <a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"></a>
 
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"><img border="0" height="231" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242209243/home/images/mainpage.PNG?height=231&amp;width=400"
 
-<tr>
-<td><b>Main Page</b><br/><br/>Provides a listing of the number of TV shows recorded in the US along with the number of currently running TV shows.  By selecting All TV Shows all 10,000 plus shows will be displayed in alphabetical order.  Selecting Current TV Shows only shows currently running shows.  Update Show Listing will go to tvrage.com and update the listing with current information.<br /><br/><br/><br/><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"><img border="0" height="231" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242209243/home/images/mainpage.PNG?height=231&amp;width=400" width="400" /></a></div><br />
-</td>
-<td><b>Whale Wars</b><br/><br/>Jumping down the page we see that some shows are highlighted in green.  This indicates that the show has had previously recorded episodes.  Clicking on the hyperlink will take you to the episode listings.<br /><br /><br /><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar1.jpg?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/whalewar1.jpg?height=235&amp;width=400" width="400" /></a></div><br /><div style="display:block;text-align:left"></div>
-</td>
-</tr>
+<a href="https://sites.google.com/site/mythepisode/home/images/whalewar1.jpg?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/whalewar1.jpg?height=235&amp;width=400" width="400"
 
 <tr>
 <td><b>Whale Wars Scheduled Episodes</b><br/><br/>The top of the page shows the number of episodes for the selected show along with the Total number of episodes, Total Recorded, Total Remaining and Total Scheduled.  By default only episodes that haven't been recorded will show up in the listing.  The episode listed in dark blue is scheduled to be recorded.  The episode listing can be refreshed from www.ragetv.com by selecting the Update Episode Listing.  Show All Episodes will show all episodes including the previously recorded episodes.<br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a></div><br />
