--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,9 +1,8 @@
 #summary A few mythepisode screenshots
 #labels Featured
 
-<a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"></a>
 
-<a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"><img border="0" height="231" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242209243/home/images/mainpage.PNG?height=231&amp;width=400"
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"><img border="0" height="231"
 
 <a href="https://sites.google.com/site/mythepisode/home/images/whalewar1.jpg?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/whalewar1.jpg?height=235&amp;width=400" width="400"
 
