--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -4,13 +4,11 @@
 
 <a href="https://sites.google.com/site/mythepisode/home/images/mainpage.PNG?attredirects=0" imageanchor="1"><img border="0" height="231" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242209243/home/images/mainpage.PNG?height=231&amp;width=400" width="400"
 
-<a href="https://sites.google.com/site/mythepisode/home/images/whalewar1.jpg?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/whalewar1.jpg?height=235&amp;width=400" width="400"
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage2.PNG?attredirects=0" imageanchor="1"><img border="0" height="235" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242147579/home/images/mainpage2.PNG?height=235&amp;width=400" width="400" /></a>
 
-<a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400"
+<a href="https://sites.google.com/site/mythepisode/home/images/whalewar2.jpg?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/whalewar2.jpg?height=244&amp;width=400" width="400" /></a>
 
-<a href="https://sites.google.com/site/mythepisode/home/images/whalewar3.jpg?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/whalewar3.jpg?height=222&amp;width=400" width="400" /></a></div><br />
-</td>
-</tr>
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpa?attredirects=0" ige3.PNGmageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/mainpage.PNG?height=222&amp;width=400" width="400" /></a>
 
 <tr>
 <td><b>TVwish List</b><br/><br/>From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /><br/><br/><br/><br/><br/><br/>
