--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -10,11 +10,6 @@
 
 <a href="https://sites.google.com/site/mythepisode/home/images/mainpage4.PNG?attredirects=0" ige3.PNGmageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/mainpage4.PNG?height=222&amp;width=400" width="400" /></a>
 
-<tr>
-<td><b>TVwish List</b><br/><br/>From a show episode listing page you can create a tvwish list that can be activated and deactivated.  TVwish is a program created by Brad Templeton that schedules programs for recording based off of many different criteria.  TVWish can be downloaded <a href="http://www.templetons.com/brad/myth/tvwish.html" rel="nofollow">http://www.templetons.com/brad/myth/tvwish.html</a><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/tvwish.jpg?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/tvwish.jpg?height=145&amp;width=400" width="400" /></a></div><br /><br/><br/><br/><br/><br/><br/>
-</td>
-<td><b>Previously Recorded Programs</b><br/><br/>Previously Recorded programs can be viewed and removed for rerecording.<br /><br /><br /><br /><br /><div style="display:block;text-align:left"><a href="https://sites.google.com/site/mythepisode/home/images/recordedprograms.jpg?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/recordedprograms.jpg?height=237&amp;width=400" width="400" /></a></div><br />
-</td>
-</tr>
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage5.PNG?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/mainpage.PNG?height=145&amp;width=400" width="400" /></a>
 
-</table>
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage6.PNG?attredirects=0" imageanchor="1"><img border="0" height="237" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242174750/home/images/mainpage6.PNG?height=237&amp;width=400" width="400" /></a>
