--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -8,7 +8,7 @@
 
 <a href="https://sites.google.com/site/mythepisode/home/images/mainpage3.PNG?attredirects=0" imageanchor="1"><img border="0" height="244" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242111649/home/images/mainpage3.PNG?height=244&amp;width=400" width="400" /></a>
 
-<a href="https://sites.google.com/site/mythepisode/home/images/mainpage4.PNG?attredirects=0" ige3.PNGmageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/mainpage4.PNG?height=222&amp;width=400" width="400" /></a>
+<a href="https://sites.google.com/site/mythepisode/home/images/mainpage4.PNG?attredirects=0" imageanchor="1"><img border="0" height="222" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242052187/home/images/mainpage4.PNG?height=222&amp;width=400" width="400" /></a>
 
 <a href="https://sites.google.com/site/mythepisode/home/images/mainpage5.PNG?attredirects=0" imageanchor="1"><img border="0" height="145" src="https://sites.google.com/site/mythepisode/_/rsrc/1281242192042/home/images/mainpage.PNG?height=145&amp;width=400" width="400" /></a>
 
