--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -46,9 +46,9 @@ cd /usr/share/mythtv/mythweb/modules/_shared/lang
 *Note:*
 If your paths differ from mine above then you will have to make a few changes to paths in 
 a couple of scripts.  I plan to fix this in the future.
-- grabid.pl
-- runwish
-- handler.php
+ * grabid.pl
+ * runwish
+ * handler.php
 
 *Note:* 
 If it takes a long time to load the main page try setting $getrecorded to 0 in handler.php.  If you do this I think the page will load faster but shows that you have recorded won't show up in green on the main page.
