--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -2,6 +2,10 @@
 #labels Featured
 
 = Details =
+Upcoming
+  * Fix to grabid.pl for special characters
+  * Better matching on episodes without subtitles or invalid subtitles
+  
 31 Aug 2010
   * Update to look of show/episode listing page
   * Update delete button look on previous recordings page
