--- a/trunk/README
+++ b/trunk/README
@@ -1,3 +1,13 @@
+##
+ # mythepisode README
+ #
+ # @date        $Date$
+ # @version     $Revision$
+ # @author      $Author: coppliger
+ # @license     $GPL
+ #
+##
+
 As installed on my system
 
 1.
