--- a/trunk/README
+++ b/trunk/README
@@ -3,8 +3,8 @@
  #
  # @date        $Date$
  # @version     $Revision$
- # @author      $Author: coppliger
- # @license     $GPL
+ # @author      Author: coppliger
+ # @license     GPL
  #
 ##
 
