--- a/trunk/README
+++ b/trunk/README
@@ -3,7 +3,7 @@
  #
  # @date        $Date$
  # @version     $Revision$
- # @author      Author: coppliger
+ # @author      $Author$
  # @license     GPL
  #
 ##
