--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -2,9 +2,10 @@
 #labels Featured
 
 = Details =
-Upcoming
+1.0.1
   * Fix to grabid.pl for special characters
   * Better matching on episodes without subtitles or invalid subtitles
+  * Fix tvwish variable
   
 31 Aug 2010
   * Update to look of show/episode listing page
