--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -2,6 +2,10 @@
 #labels Featured
 
 = Details =
+1.0.2(Currently trunk)
+  * Update grabid.pl and grabshowsall.pl to bail out if it can't connect
+    to tvrage.com, leaving current shows.txt and summary files intact
+
 1.0.1
   * Fix to grabid.pl for special characters
   * Better matching on episodes without subtitles or invalid subtitles
