--- a/README
+++ b/README
@@ -11,12 +11,12 @@
 As installed on my system
 
 1.
-cd /var/www/mythweb/modules
-gunzip //tmp/episode.tar.gz
+cd /usr/share/mythtv/mythweb/modules
+gunzip /tmp/episode.tar.gz
 tar xvf /tmp/episode.tar
 
 2. 
-cd /var/www/mythweb/modules/_shared/tmpl/default
+cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
 Add a line like the following to header.php  
 
 NOTE: If you have installed mythepisode in the past you need to update the line below 
@@ -35,17 +35,17 @@ cd /var/lib/mythtv/episode
 gunzip /tmp/data.tar.gz
 tar xvf /tmp/data.tar
 chown -R www-data:www-data /var/lib/mythtv/episode    (my web server runs as www-data)
-cd /var/www/mythweb/data
+cd /usr/share/mythtv/mythweb/data
 ln -s /var/lib/mythtv/episode  episode
 
 4.
 download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it
 under /usr/share/mythtv/tvwish
 Add a cronjob to roots crontab
-00 12 * * * /var/www/mythweb/modules/episode/utils/runwish > /dev/null 2>&1
+00 12 * * * /usr/share/mythtv/mythweb/modules/episode/utils/runwish > /dev/null 2>&1
 
 5.
-cd /var/www/mythweb/modules/_shared/lang
+cd /usr/share/mythtv/mythweb/modules/_shared/lang
 ./build_translation.pl
 
 *Note:*
