Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -4,6 +4,7 @@
 = Details =
 1.0.2(Currently trunk)
   * Update grabid.pl and grabshowsall.pl to bail out if it can't connect to tvrage.com, leaving current shows.txt and summary files intact
+  * Remove class/include directories from mythepisode and point to modules/tv
 
 1.0.1
   * Fix to grabid.pl for special characters
