--- a/trunk/CHANGES
+++ b/trunk/CHANGES
@@ -2,6 +2,7 @@
     * Update grabid.pl and grabshowsall.pl to bail out if it can't connect 
       to tvrage.com, leaving current shows.txt and summary files intact 
     * Remove class/include directories from mythepisode and point to modules/tv 
+    * Fix layout of special episodes
 
 1.0.1
     * Fix to grabid.pl for special characters
