Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -6,6 +6,7 @@
   * Update grabid.pl and grabshowsall.pl to bail out if it can't connect to tvrage.com, leaving current shows.txt and summary files intact
   * Remove class/include directories from mythepisode and point to modules/tv
   * Fix layout of special episodes
+  * Update paths so different distros require fewer path updates - only one possible path update in runwish
 
 1.0.1
   * Fix to grabid.pl for special characters
