--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.0.3 trunk
+    * Update to grabid.pl to grab additional show information and show
+      thumbnail
+    * Update episodes.php to display thumbnail and addition show information
+
 1.0.2
     * Update grabid.pl and grabshowsall.pl to bail out if it can't connect 
       to tvrage.com, leaving current shows.txt and summary files intact 
