See README for changes

--- a/README
+++ b/README
@@ -9,6 +9,9 @@
  #
 ##
 
+NOTE:  I'm interested in feedback from anyone running trunk or the soon to be
+release .24
+
 NOTE:  If you are running mythweb trunk you will need to make a couple of changes to
 episodes.php since trunk has changed some of the mythweb classes/includes.  I've
 only had feedback from others and haven't tested this with trunk.
@@ -78,17 +81,37 @@ If it takes a long time to load the main page try setting $getrecorded to 0 in h
 If you do this I think the page will load faster but shows that you have recorded won't show 
 up in green on the main page.
 
-*Note:*  
-When you do an "Update listing" either for the shows or episodes please be patient as it is 
-going out to tvrage and updating the information.  Generally updating the "Show Listing" is 
-fairly quick(less than 30 seconds).  The more episodes a show has the longer it takes to 
-gather summary information.  A show like "General Hospital" that has 5000 episodes can take 
-forever.  I don't recommend updating shows like this very often.  It can take up to an hour.  
-If you have an account with tvrage I have a script that makes grabbing summaries much much faster.  
-For instance, a show like "General Hospital" that takes up to an hour can be reduced to less than 
-a minute.
-
 *Note:*
 The episodes page will display a thumbnail and additional information for each show.  The info
 will initially be blank with no thumbnail and blank show info until you do a "Update Episode
 Listing" on the episode page.  This will force a grab of the thumbnail and show information. 
+
+*Note:*
+I have added a file called override.txt which will reside in data/episode/override.txt.  When
+you first install mythepisode if the file doesn't exist in data/episode it will be copied from
+the utils directory and placed in data/episode.  This file is used to overcome issues with shows
+that have different recorded titles than those that come from tvrage.com
+
+A couple of examples that impact me
+
+recorded by mythtv as:		listed in mythepisode as:
+----------------------          ------------------------- 
+Survivor: Nicaragua		Survivor
+2010 MTV Video Music Awards	MTV Video Music Awards
+Hawaii Five-0			Hawaii Five-0 (2010)
+The Amazing Race 17		The Amazing Race
+
+To overcome this issue you can add them to override.txt using the following format
+recorded name:::tvrage name
+
+Survivor: Nicaragua:::Survivor
+62nd Primetime Emmy Awards:::The Emmy Awards
+2010 MTV Video Music Awards:::MTV Video Music Awards
+2010 World Series of Poker:::World Series of Poker
+Hawaii Five-0:::Hawaii Five-0 (2010)
+The Amazing Race 17:::The Amazing Race
+
+Some shows like Survivor have a different name every year but need to be listed
+under Survivor within mythepisode.  You can add these by putting --- inbetween each one.
+Survivor: Nicaragua---Survivor: Pearl Island:::Survivor
+2010 World Series of Poker---2011 World Series of Poker:::World Series of Poker
